# widemem-ai

./: .gitignore  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  YMYL.md  blog-semantic-ymyl.md  glama.json  llms.txt  pyproject.toml  railway.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  scorecard.yml
benchmark/: HONEST_LOCOMO.md  MINI_LOCOMO.md  honest_core.py  honest_locomo.py  mini_locomo.py  val.py
benchmark/results/: mini_locomo_baseline.json
docs/: api.md  configuration.md  mcp.md
examples/: basic_usage.py  healthcare_quickstart.py  hierarchical_memory.py  temporal_queries.py  ymyl_active_retrieval.py
scripts/: create_diagram.py  e2e_test.py  train_extractor.py
tests/: conftest.py  test_abstention.py  test_active_retrieval.py  test_adapt_bm25_weight.py  test_adapt_scoring.py  test_bench.py  test_bm25.py  test_consolidation.py  test_datetime_parse.py  test_durability_concurrency.py  test_entities.py  test_entity_boost.py  test_entity_index.py  test_explain.py  test_extraction.py  test_extraction_importance.py  test_graph.py  test_hierarchy.py  test_honest_core.py  test_honest_runner.py  test_hybrid.py  test_memory.py  test_ollama_embeddings.py  test_pgvector_store.py  test_sanitizer.py  test_scoring.py  test_search_temporal_integration.py  test_server_auth_policy.py  test_streaming.py  test_temporal_boost.py  test_temporal_parser.py  test_ymyl_recall.py  test_ymyl_topics.py
widemem/: __init__.py  bench.py  cli.py  mcp_server.py  server.py
widemem/conflict/: batch_resolver.py  prompts.py
widemem/core/: _time.py  exceptions.py  memory.py  pipeline.py  types.py
widemem/extraction/: base.py  collector.py  datetime_parse.py  entities.py  llm_extractor.py  prompts.py  self_supervised.py
widemem/graph/: __init__.py  extract.py  retrieve.py  store.py
widemem/hierarchy/: manager.py  prompts.py  query_router.py  summarizer.py
widemem/providers/embeddings/: base.py  ollama.py  openai.py  sentence_transformers.py
widemem/providers/llm/: anthropic.py  base.py  ollama.py  openai.py
widemem/retrieval/: abstention.py  active.py  bm25.py  entity_boost.py  explain.py  hybrid.py  prompts.py  responses.py  temporal.py  temporal_parser.py  uncertainty.py
widemem/scoring/: decay.py  importance.py  persistence.py  topics.py  ymyl.py
widemem/security/: __init__.py  sanitizer.py
widemem/storage/: history.py
widemem/storage/vector/: base.py  faiss_store.py  pgvector_store.py  qdrant_store.py
widemem/utils/: hashing.py  id_mapping.py
